# gnome-shot

./: .gitignore  Cargo.toml  README.md  org.gnome.GnomeShot.yml
data/: org.gnome.GnomeShot.desktop  org.gnome.GnomeShot.metainfo.xml
extension/: extension.js  install.sh  metadata.json  prefs.js
extension/schemas/: org.gnome.shell.extensions.gnome-shot.gschema.xml
src/: application.rs  main.rs  window.rs
src/canvas/: annotations.rs  canvas_widget.rs  history.rs  mod.rs  tools.rs
src/capture/: mod.rs  portal.rs  types.rs
