[package]
name = "gnome-shot"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
license = "GPL-3.0-or-later"
description = "A screenshot and annotation tool for GNOME"
repository = "https://github.com/yourusername/gnome-shot"

[dependencies]
# GTK4 and Libadwaita
gtk = { package = "gtk4", version = "0.10", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.8", features = ["v1_4"] }

# Async runtime
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }

# D-Bus communication
zbus = "5"

# XDG Desktop Portal for screenshots
ashpd = { version = "0.12", features = ["gtk4", "tokio"] }

# Cairo for drawing
cairo-rs = { version = "0.21", features = ["png"] }

# Image processing
image = "0.25"

# Error handling
anyhow = "1"
thiserror = "2"

# URL handling for portal responses
url = "2"

[build-dependencies]
glib-build-tools = "0.21"

[profile.release]
opt-level = 3
lto = true
strip = true
